# hare

./: CMakeLists.txt  README.md
problems/: sample-out.xml  sample.xml
problems/p6.2/: ss0.6-out.xml  ss0.9-out.xml  ss0.9.xml  ss0.95-out.xml  ss0.95.xml  ss0.99-out.xml  ss0.99.xml
problems/p7.1/: z5-out.xml  z5.xml  z6-out.xml  z6.xml  z7-out.xml  z7.xml  z8-out.xml  z8.xml  z9-out.xml  z9.xml
python/: hw3plots.py
src/: Check.cc  Check.hh  FD_Sn_Transport.cc  FD_Sn_Transport.hh  Gauss_Legendre.cc  Gauss_Legendre.hh  Hare.cc  Timer.cc  Timer.hh  XML_Child_Value.hh
test/: sample-out.xml  sample.xml  test_hare-out.xml  test_hare-out.xml~  test_hare.xml  test_owl.xml
test/verification/: test_owl-out.xml
